
- Backport fix from master: ``request.static_url`` now generates URL-quoted
  URLs when fed a ``path`` argument which contains characters that are
  unsuitable for URLs.  See https://github.com/Pylons/pyramid/issues/349 for
  more information.

- Backport from master: fix ``request.json_body`` to deal with alternate
  request charsets.

Testing
-------

- Make tox use WebOb 1.1 for Python 2.5-based systems (WebOb 1.2 is 2.6+).

1.2.1 (2011-09-28)
==================

Features
--------

- Lone instance methods can now be treated as view callables (see
  https://github.com/Pylons/pyramid/pull/283).

Bug Fixes
---------

- Update auth_tkt authentication policy to accept unicode tokens as long as
  they only contain ASCII content. See
  https://github.com/Pylons/pyramid/issues/293.

Documentation
-------------

- Fix ``..note`` and ``..warning`` directives to run properly under newer
  Sphinx.

1.2 (2011-09-12)
================

Features
--------

- Route pattern replacement marker names can now begin with an underscore.
  See https://github.com/Pylons/pyramid/issues/276.

1.2b3 (2011-09-11)
==================

Bug Fixes
---------

- The route prefix was not taken into account when a static view was added in
  an "include".  See https://github.com/Pylons/pyramid/issues/266 .

1.2b2 (2011-09-08)
==================

Bug Fixes
---------

- The 1.2b1 tarball was a brownbag (particularly for Windows users) because
  it contained filenames with stray quotation marks in inappropriate places.
  We depend on ``setuptools-git`` to produce release tarballs, and when it
  was run to produce the 1.2b1 tarball, it didn't yet cope well with files
  present in git repositories with high-order characters in their filenames.

Documentation
-------------

- Minor tweaks to the "Introduction" narrative chapter example app and
  wording.

1.2b1 (2011-09-08)
==================

Bug Fixes
---------

- Sometimes falling back from territory translations (``de_DE``) to language